added media queries

--- a/app/html/components/footer.html
+++ b/app/html/components/footer.html
@@ -4,7 +4,7 @@
 
       <div class="footer__items">
         <a class="logo footer__logo" href="#">
-          <img class="logo__img" src="images/svg/logo.svg" width="200" height="39" alt="логотип">
+          <img class="logo__img footer__img" src="images/svg/logo.svg" width="200" height="39" alt="логотип">
         </a>
         <form class="form-subscribe" action="#">
           <label class="sr-only">введите email</label>
