--- a/app/html/components/page-catalog/discounts.html
+++ b/app/html/components/page-catalog/discounts.html
@@ -1,9 +1,9 @@
 <section class="discounts section-padding">
   <div class="container">
     <h2 class="discounts__title title">Акции и скидки</h2>
-    <ul class="best-restaurants__items discounts__items">
+    <ul class="discounts__items">
 
-      <li class="best-restaurants__item discounts__item">
+      <li class="discounts__item">
         <article class="restaurant-card">
           <img class="restaurant-card__img" width="370" height="300" src="images/restaurants/blaze-pizza.jpg"
             alt="Blaze Pizza">
@@ -11,14 +11,14 @@
         </article>
       </li>
 
-      <li class="best-restaurants__item discounts__item">
+      <li class="discounts__item">
         <article class="restaurant-card">
           <img class="restaurant-card__img" width="370" height="300" src="images/restaurants/kfc.jpg" alt="KFC">
           <h3 class="restaurant-card__title discounts__subtitle">Картошечка из KFC даром при заказе бургера</h3>
         </article>
       </li>
 
-      <li class="best-restaurants__item discounts__item">
+      <li class="discounts__item">
         <article class="restaurant-card">
           <img class="restaurant-card__img" width="370" height="300" src="images/restaurants/star-burger.jpg"
             alt="Star Burgers">
