--- a/app/html/components/page-index/popular-categories.html
+++ b/app/html/components/page-index/popular-categories.html
@@ -44,8 +44,8 @@
       </li>
     </ul>
 
-    <ul class="burgers">
-      <li class="burgers__item mix category-a">
+    <ul class="popular-categories__burgers">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
             alt="Чизбургер с листьями салата">
@@ -57,7 +57,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-b">
+      <li class="popular-categories__box mix category-b">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
           <h3 class="product-card__title">Бифбургер</h3>
@@ -68,7 +68,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-c">
+      <li class="popular-categories__box mix category-c">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
             alt="Королевский чизбургер">
@@ -80,7 +80,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
             alt="Черный гамбургер">
@@ -92,7 +92,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
             alt="Чикен бургер">
@@ -104,7 +104,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-a">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
             alt="Чизбургер с листьями салата">
@@ -116,7 +116,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
           <h3 class="product-card__title">Бифбургер</h3>
@@ -127,7 +127,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-c">
+      <li class="popular-categories__box mix category-c">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
             alt="Королевский чизбургер">
@@ -137,7 +137,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-b">
+      <li class="popular-categories__box mix category-b">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
             alt="Черный гамбургер">
@@ -149,7 +149,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-a">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
             alt="Чикен бургер">
