--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -212,14 +212,13 @@ body {
   font-weight: 400;
   font-size: 24px;
   line-height: 1.2;
-  padding-bottom: 15px;
+  padding: 15px 0 15px 15px;
   border-bottom: 1px solid #ECECEC;
 }
 
 .filter-style {
-  background-color: #FFFFFF;
+  background-color: $white;
   border: 1px solid #ECECEC;
   border-radius: 5px;
-  padding: 15px 0 19px 15px;
   margin-bottom: 30px;
 }
