--- a/app/scss/components/_restaurant-card.scss
+++ b/app/scss/components/_restaurant-card.scss
@@ -26,7 +26,7 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 1.3;
-    padding-left: 20px;
+    padding: 15px 0 0 20px;
   }
 
   &__time {
@@ -53,7 +53,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 18px;
+    padding: 20px 20px;
   }
 
   &__link {
