--- a/app/scss/components/page-catalog/_discounts.scss
+++ b/app/scss/components/page-catalog/_discounts.scss
@@ -1,4 +1,8 @@
-.best-restaurants {
+.discounts {
+  @include r ($medium) {
+    padding-top: 40px;
+  }
+
   @include r ($medium) {
     .slick-dots {
       display: flex;
@@ -42,23 +46,29 @@
     }
   }
 
-  &__title {
-    text-align: center;
-    margin-bottom: 45px;
-  }
-
   &__items {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0 -30px 30px 0;
-
-    @include r ($xl) {
-      margin: 0 -20px 20px 0;
-    }
 
     @include r ($large) {
-      margin: 0 -15px 15px 0;
+      margin: 0 -10px 10px 0;
+    }
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: 30px;
+
+      @include r ($large) {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  &__item {
+    @include r ($large) {
+      width: 40%;
     }
 
     @include r ($small) {
@@ -66,20 +76,16 @@
     }
   }
 
-  &__item {
-    margin: 0 30px 30px 0;
+  &__title {
+    text-align: center;
+    margin-bottom: 60px;
 
-    @include r ($xl) {
-      margin: 0 20px 20px 0;
+    @include r ($medium) {
+      margin-bottom: 40px;
     }
+  }
 
-    @include r ($large) {
-      margin: 0 15px 15px 0;
-      width: 45%;
-    }
-
-    @include r ($small) {
-      margin: 0;
-    }
+  &__subtitle {
+    padding: 20px 15px;
   }
 }
