--- a/app/scss/components/page-index/_popular-categories.scss
+++ b/app/scss/components/page-index/_popular-categories.scss
@@ -8,6 +8,46 @@
     }
   }
 
+  &__burgers {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -30px 30px 0;
+
+    @include r ($xl) {
+      margin: 0 -20px 20px 0;
+    }
+
+    @include r ($large) {
+      display: flex;
+      justify-content: center;
+      margin: 0 -15px 15px 0;
+    }
+
+    @include r ($small) {
+      margin: 0 -5px 10px 0;
+    }
+  }
+
+  &__box {
+    max-width: 210px;
+    width: 100%;
+    margin: 0 30px 30px 0;
+
+    @include r ($xl) {
+      width: 100%;
+      margin: 0 20px 20px 0;
+    }
+
+    @include r ($large) {
+      margin: 0 15px 15px 0;
+    }
+
+    @include r ($small) {
+      width: 45%;
+      margin: 0 5px 10px 0;
+    }
+  }
+
   &__menu {
     display: flex;
     align-items: center;
