--- a/app/html/components/pagination.html
+++ b/app/html/components/pagination.html
@@ -3,7 +3,7 @@
      <li class="pagination__item pagination__item--noactive">
        <a class="pagination__link pagination__link--prev">
          <svg>
-           <use xlink:href="images/sprite.svg#slider-arrow"></use>
+           <use xlink:href="images/sprite.svg#product-arrow"></use>
          </svg>
        </a>
      </li>
@@ -25,7 +25,7 @@
      <li class="pagination__item">
        <a class="pagination__link pagination__link--next" href="#">
          <svg>
-           <use xlink:href="images/sprite.svg#slider-arrow"></use>
+           <use xlink:href="images/sprite.svg#product-arrow"></use>
          </svg>
        </a>
      </li>
