--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,3 +28,6 @@
 @import 'components/pagination';
 @import 'components/page-catalog/discounts';
 @import 'components/page-catalog/mobile-catalog';
+@import 'components/page-product/product';
+@import 'components/tabs';
+@import 'components/interst';
