--- a/app/scss/components/_apps.scss
+++ b/app/scss/components/_apps.scss
@@ -10,8 +10,9 @@
     justify-content: space-between;
     align-items: center;
 
-    @include r($small) {
+    @include r($medium) {
       flex-direction: column;
+      align-items: flex-start;
     }
   }
 
@@ -31,6 +32,11 @@
       max-width: 480px;
       width: 100%;
       margin-right: 20px;
+    }
+
+    @include r($xl) {
+      max-width: 100%;
+      margin-right: 0;
     }
   }
 
@@ -61,7 +67,7 @@
       background-size: contain;
     }
 
-    @include r($small) {
+    @include r($medium) {
       display: none;
     }
   }
