--- a/app/scss/components/page-catalog/_discounts.scss
+++ b/app/scss/components/page-catalog/_discounts.scss
@@ -48,17 +48,32 @@
 
   &__items {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
 
+    @include r ($xl) {
+      margin-right: 15px;
+    }
+
     @include r ($large) {
-      margin: 0 -10px 10px 0;
+      margin-right: 10px;
+    }
+
+    @include r ($medium) {
+      flex-wrap: wrap;
+    }
+
+    @include r ($small) {
+      margin: 0;
     }
   }
 
   &__item {
     &:not(:last-child) {
       margin-right: 30px;
+
+      @include r ($xl) {
+        margin-right: 15px;
+      }
 
       @include r ($large) {
         margin-right: 10px;
@@ -69,6 +84,10 @@
   &__item {
     @include r ($large) {
       width: 40%;
+    }
+
+    @include r ($medium) {
+      margin-bottom: 10px;
     }
 
     @include r ($small) {
@@ -87,5 +106,9 @@
 
   &__subtitle {
     padding: 20px 15px;
+
+    @include r ($xl) {
+      padding: 15px 10px;
+    }
   }
 }
