--- a/app/scss/components/page-catalog/_mobile-catalog.scss
+++ b/app/scss/components/page-catalog/_mobile-catalog.scss
@@ -2,7 +2,7 @@
   display: none;
 
   @include r($medium) {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
